2003-01-20  Richard M. Stallman  <rms@gnu.org>

	* xdisp.c (redisplay_window): If mini window's buffer is not
	a minibuffer, then redisplay it like other windows.

2003-01-20  Jan D.  <jan.h.d@swipnet.se>

	* gtkutil.c (xg_create_frame_widgets): Check if there is an
	external tool bar before setting tool bar height.

2003-01-19  Jan D.  <jan.h.d@swipnet.se>

	* xterm.c (handle_one_xevent): Surround popup_activated
	with #ifdef:s for non-toolkit version.

	* Makefile.in (XOBJ): Add gtkutil.o if USE_GTK
	(gtkutil.o): New file.
	(TOOLKIT_DEFINES): Set to -DUSE_GTK if HAVE_GTK.
	(LIBW): Set to @GTK_LIBS@ if USE_GTK.

	* gtkutil.c: New file for GTK version.

	* gtkutil.h: New file for GTK version.

	* xterm.h: Add xt_or_gtk_widget.
	Include gtk files for USE_GTK.
	(struct x_output): Add toolbar_height.
	(struct x_output): Add GTK widgets and Gdk size_hints.
	(GTK_WIDGET_TO_X_WIN, FRAME_GTK_OUTER_WIDGET, FRAME_GTK_WIDGET)
	(FRAME_OUTER_WINDOW): New macros for USE_GTK.
	(FRAME_OUTER_TO_INNER_DIFF_Y): Add FRAME_TOOLBAR_HEIGHT to calculation.

	* xterm.c: Include gtkutil.h for USE_GTK.
	Declare extern void free_frame_menubar for USE_GTK.
	(note_mouse_highlight): Check popup_activated for USE_GTK.
	(xt_action_hook): Don't compile if USE_GTK.
	(x_scroll_bar_to_input_event): Use CurrentTime for USE_GTK.
	(xg_scroll_callback): New function.
	(x_create_toolkit_scroll_bar): Call xg_create_scroll_bar for USE_GTK.
	(x_set_toolkit_scroll_bar_thumb): Call xg_set_toolkit_scroll_bar_thumb
	for USE_GTK.
	(x_scroll_bar_create): Call xg_update_scrollbar_pos and
	xg_show_scroll_bar for USE_GTK.
	(x_scroll_bar_remove): Call xg_remove_scroll_bar for USE_GTK.
	(XTset_vertical_scroll_bar): Call xg_update_scrollbar_pos for USE_GTK.
	(event_handler_gdk): New function for USE_GTK.
	(handle_one_xevent): Call xg_resize_widgets for USE_GTK.
	(handle_one_xevent): Make sure widget is mapped before
	calling x_real_positions for USE_GTK.
	(XTread_socket): Add GTK event loop for USE_GTK.